--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
   redis:
-    image: redis:6.0.9-alpine
+    image: redis:7.0.1-alpine3.16
     ports:
       - 127.0.0.1:6379:6379
